@@ -11444,6 +11444,9 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
           SMTPNewProcFileSysLogErrorHandler
           (NEWPROC_ERROR_HANDLER_NEW_PROCESS_PACKAGE_ID and
           NEWPROC_ERROR_HANDLER_NEW_PROCESS_WORKFLOWPROCESS_ID)</para>
+
+          <para>- Improved recognition of I18N variables usage inside
+          expressions</para>
         </listitem>
       </itemizedlist>
     </section>
